# QtDocxTemplate

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  docs-check.yml  docs-deploy.yml  sanitizers.yml
cmake/: Doxyfile.in  QtDocxTemplateConfig.cmake.in  cmake_uninstall.cmake.in
docs/: BulletListVariable_8hpp.html  BulletListVariable_8hpp.js  Docx_8hpp.js  Doxyfile.in  ImageVariable_8hpp.html  ImageVariable_8hpp.js  ImageVariable_8hpp_source.html  TableVariable_8hpp.html  TextVariable_8hpp_source.html  VariablePattern_8hpp.html  VariablePattern_8hpp_source.html  Variable_8hpp.html  Variables_8hpp.html  Variables_8hpp.js  annotated.html  classQtDocxTemplate_1_1BulletListVariable-members.html  classQtDocxTemplate_1_1Docx.js  classQtDocxTemplate_1_1ImageVariable-members.html  classQtDocxTemplate_1_1ImageVariable.html  classQtDocxTemplate_1_1ImageVariable.js  classQtDocxTemplate_1_1TextVariable-members.html  classQtDocxTemplate_1_1TextVariable.js  classQtDocxTemplate_1_1Variable.html  classQtDocxTemplate_1_1Variables-members.html  classQtDocxTemplate_1_1Variables.js  classes.html  dir_175a57042e49b0b11c02ce15f2a110a1.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  navtreedata.js  navtreeindex0.js  structQtDocxTemplate_1_1VariablePattern-members.html  structQtDocxTemplate_1_1VariablePattern.html
docs/html/: BulletListVariable_8hpp_source.html  Docx_8hpp.html  Docx_8hpp_source.html  Export_8hpp_source.html  TableVariable_8hpp.js  TableVariable_8hpp_source.html  TextVariable_8hpp.html  TextVariable_8hpp.js  VariablePattern_8hpp.js  Variable_8hpp.js  Variable_8hpp_source.html  Variables_8hpp_source.html  annotated_dup.js  classQtDocxTemplate_1_1BulletListVariable.html  classQtDocxTemplate_1_1BulletListVariable.js  classQtDocxTemplate_1_1Docx-members.html  classQtDocxTemplate_1_1Docx.html  classQtDocxTemplate_1_1TableVariable-members.html  classQtDocxTemplate_1_1TableVariable.html  classQtDocxTemplate_1_1TableVariable.js  classQtDocxTemplate_1_1TextVariable.html  classQtDocxTemplate_1_1Variable-members.html  classQtDocxTemplate_1_1Variable.js  classQtDocxTemplate_1_1Variables.html  dir_175a57042e49b0b11c02ce15f2a110a1.js  functions.html  hierarchy.js  structQtDocxTemplate_1_1VariablePattern.js
docs/html/search/: all_3.js  all_6.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_3.js  files_0.js  files_2.js  files_4.js  functions_4.js  functions_5.js  functions_9.js  functions_a.js
docs/search/: all_1.js  all_2.js  all_4.js  all_7.js  all_b.js  all_d.js  classes_2.js  classes_4.js  enums_0.js  files_1.js  files_3.js  functions_0.js  functions_2.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js
examples/: CMakeLists.txt
examples/image_variable/: CMakeLists.txt  main.cpp
examples/minimal/: CMakeLists.txt  main.cpp
examples/table_variable/: CMakeLists.txt  main.cpp
examples/text_variables/: CMakeLists.txt  main.cpp
include/QtDocxTemplate/: BulletListVariable.hpp  Docx.hpp  Export.hpp  ImageVariable.hpp  TableVariable.hpp  TextVariable.hpp  Variable.hpp  VariablePattern.hpp  Variables.hpp  Version.hpp.in
install/include/QtDocxTemplate/: ImageVariable.hpp  TableVariable.hpp  TextVariable.hpp  Variable.hpp  VariablePattern.hpp  Variables.hpp  Version.hpp
install/lib64/cmake/QtDocxTemplate/: QtDocxTemplateConfig.cmake  QtDocxTemplateTargets-release.cmake  QtDocxTemplateTargets.cmake
install/lib64/cmake/minizip/: minizip-config.cmake  minizip.cmake
install/lib64/pkgconfig/: minizip.pc
scripts/: release-fedora.sh
src/: BulletListVariable.cpp  Docx.cpp  ImageVariable.cpp  TableVariable.cpp  TextVariable.cpp  Variable.cpp  Variables.cpp
src/engine/: Replacers.cpp  Replacers.hpp  RunModel.cpp  RunModel.hpp
src/opc/: Package.cpp  Package.hpp
src/util/: Emu.hpp
src/xml/: XmlPart.cpp  XmlPart.hpp
tests/: CMakeLists.txt  bullet_replace_test.cpp  image_replace_test.cpp  package_test.cpp  table_replace_test.cpp  test_main.cpp  text_replace_edge_test.cpp  text_replace_test.cpp  whitespace_probe.cpp  xml_test.cpp
